--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set. 
-* text eol=lf 
- 
-# Explicitly declare text files you want to always be normalized and converted 
-# to native line endings on checkout. 
-*.def text eol=lf 
-*.cls text eol=lf 
+* text = false 
  
 .gitignore     export-ignore 
 .gitattributes export-ignore 
