Replaced carriage return from CR-LF to LF

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,10 @@
 # Set the default behavior, in case people don't have core.autocrlf set. 
 * text = false 
+* text eol=lf
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
  
 .gitignore     export-ignore 
 .gitattributes export-ignore 
