--- a/.github/config.yml
+++ b/.github/config.yml
@@ -17,3 +17,9 @@ firstPRMergeComment: >
   Congrats on merging your first pull request! We here at behaviorbot are proud of you! Thanks to you, the EuropeCV package increases and is now bigger than before.
 
 # It is recommend to include as many gifs and emojis as possible
+
+# Configuration for request-info - https://github.com/behaviorbot/request-info
+
+# *Required* Comment to reply with
+requestInfoReplyComment: >
+  We would appreciate it if you could provide us with more info about this issue/pr!
