Update CONTRIBUTING.md file

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@
 *.json
 
 # Exceptions
-!templates/*
-!examples/*
+!templates/.pdf
+!examples/.pdf
+!templates/.tex
+!examples/.tex
 
 # Vscode folder
 .vscode/*
